src/test/deca/syntax/parser/valid/test/pars_val_instruction_eq_neq_expr_simple!=.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction pour les eq_neq_expr !=.
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023


{
    instruction_bidon!= instruction_bidon3 ;
}