src/test/deca/syntax/parser/invalid/test/test_pars_inv_intruction_eq_neq_expr_multiple_=_seul.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les eq_neq_expr
//
// Resultats:
//    Ligne 11 : Erreur ( oubli "=" pour "==")
//    
//
// Historique:
//    cree le 04/01/2023
{
    expression_bidon = expression_bidon1;
}
